# pgcommitfest

./: .editorconfig  .gitignore  LICENSE  Makefile  README  README.md  biome.json  dev_requirements.txt  manage.py  pyproject.toml  requirements.txt  run_dev.py  setup.cfg  update.sh  uwsgi_dev.ini
.github/workflows/: ci.yaml  deploy.yaml  transferdb.yaml
media/commitfest/css/: commitfest.css
media/commitfest/js/: change_tag.js  commitfest.js
pgcommitfest/: auth.py  local_settings_example.py  settings.py  test_settings.py  urls.py  wsgi.py
pgcommitfest/commitfest/: admin.py  ajax.py  apiv1.py  apps.py  context_processors.py  feeds.py  forms.py  lookups.py  models.py  reports.py  util.py  views.py  widgets.py
pgcommitfest/commitfest/fixtures/: archive_data.json  auth_data.json  commitfest_data.json
pgcommitfest/commitfest/migrations/: 0001_initial.py  0002_notifications.py  0003_withdrawn_status.py  0004_target_version.py  0005_history_dateindex.py  0006_cfbot_integration.py  0007_needs_rebase_emails.py  0008_move_mail_thread_many_to_many.py  0009_extra_branch_fields.py  0010_add_failing_since_column.py  0011_add_draft_remove_future.py  0011_add_status_related_constraints.py  0011_patch_status_draft.py  0011_patch_status_parked.py  0011_tag_patch_tags.py  0012_add_parked_cf_status.py  0012_add_status_related_constraints.py  0012_commitfest_status_draft.py  0012_commitfest_status_parking.py  0013_add_drafts_cf.py  0013_add_parking_lot.py  0013_no_patches_in_future_cfs.py  0013_tag_patch_tags.py  0014_add_paused_cfbot_task_state.py  0015_cfbot_duplicate_task_fix.py  (+5 more)
pgcommitfest/mailqueue/: admin.py  util.py
pgcommitfest/userprofile/: admin.py  forms.py  models.py  util.py  views.py
tools/commitfest/: check_patches_in_archives.py  update_archive_threads.py
tools/githook/: pre-commit
tools/mail/: send_queued_mail.py
(+51 files in other folders)
