[project]
name = "pgocmmitfest"
description = "Commitfest app for the PostgreSQL community"
dynamic = ["version"]
readme = "README.md"
licsense = "PostgreSQL"
dependencies = [
    "django>=4.2,<5.0",
    "psycopg2",
    "simplejson",
    "requests",
    "pycryptodomex",
]

[project.optional-dependencies]
dev = [
    "uwsgi",
    "pycodestyle",
    "ruff",
    "djhtml",
]

[tool.setuptools.packages.find]
include = ["pgcommitfest*"]

[tool.pycodestyle]
statistics = true
ignore = ["E402", "E501", "W503"]
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "django",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
django = ["django"]
